docs/tests/nameres/expressions/valid/Vector.src
// Valid

let vec<i64, 9> v1 = { 1, 2, 3, 4, 5, 6, 7, 8, 9 };