docs/tests/nameres/expressions/invalid/VectorTypeDoesntExist.src
// Invalid

let vec<foo, 3> v1;